--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,17 @@
-<!-- Footer -->
-  <footer id="footer">
-    <ul class="icons">
-      {% if site.facebook_username %}
-      <li><a href="https://www.facebook.com/{{ site.facebook_username }}" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-      {% endif %}
-      {% if site.twitter_username %}
-      <li><a href="https://twitter.com/{{ site.twitter_username }}" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-      {% endif %}
-      {% if site.linkedin_username %}
-      <li><a href="https://linkedin.com/in/{{ site.linkedin_username }}" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-      {% endif %}
-      {% if site.instagram_username %}
-      <li><a href="https://www.instagram.com/{{ site.instagram_username }}" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-      {% endif %}
-      {% if site.pinterest_username %}
-      <li><a href="https://pinterest.com/{{ site.pinterest_username }}" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-      {% endif %}
-      {% if site.flickr_username %}
-      <li><a href="https://www.flickr.com/photos/{{ site.flickr_username }}" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-      {% endif %}
-      {% if site.github_username %}
-      <li><a href="https://github.com/{{ site.github_username }}" class="icon fa-github"><span class="label">Github</span></a></li>
-      {% endif %}
-      {% if site.email %}
-      <li><a href="mailto:{{ site.email }}" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-      {% endif %}
-      {% if site.feed_icon %}
-      <li><a href="{{ site.github.url }}/{{ site.feed_icon }}.xml" class="icon fa-rss"><span class="label">Feed</span></a></li>
-      {% endif %}
-    </ul>
-    <ul class="copyright">
-      <li>&copy; {{ site.copyright }}</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-    </ul>
-  </footer>
+<footer class="footer">
+  <span class="footer__copyright">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved.</span>
+</footer>
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/js/main.js?{{site.time | date: '%s%N'}}"></script>
+{% if site.google_analytics and jekyll.environment != "development" %}
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', '{{ site.google_analytics }}', 'auto');
+  ga('send', 'pageview');
+</script>
+{% endif %}
